...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeletePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

...
